--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ body {
   <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
   </div>
   <!-- <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button> -->
-  <a class="btn btn-lg btn-primary btn-block" href="index.html">Login</a>
+  <a class="btn btn-lg btn-primary btn-block" href="user.html">Login</a>
   <br>
 </form>
 
